Добавил новую модель, к ней контекст, сделал миграцию. User UserDbContext

--- a/AspForSQL/appsettings.json
+++ b/AspForSQL/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApiDatabase": "Host=localhost; Port=5433; DataBase=Example; UserName=postgres; Password=DpdlT3t5"
+    "ApiDatabase": "Host=localhost; Port=5433; DataBase=Example; UserName=postgres; Password=DpdlT3t5",
+    "AutDatabase": "Host=localhost; Port=5433; DataBase=Example; UserName=postgres; Password=DpdlT3t5"
   }
 }
