Добавил контроллер который отвечает за регисрацию и логин пользователя. пока он сравнивет все с пременным экземпляром класса а не с информацией из бд. Но это ток пока

--- a/AspForSQL/appsettings.json
+++ b/AspForSQL/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "ApiDatabase": "Host=localhost; Port=5433; DataBase=Example; UserName=postgres; Password=DpdlT3t5",
     "AutDatabase": "Host=localhost; Port=5433; DataBase=Example; UserName=postgres; Password=DpdlT3t5"
+  },
+  "AuthConfiguration": {
+    "Key": "key",
+    "Issuer": "DevTips",
+    "Audience": "DevTips"
   }
 }
