--- a/AspForSQL/AspForSQL.csproj
+++ b/AspForSQL/AspForSQL.csproj
@@ -17,6 +17,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.6.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\UserDb\" />
   </ItemGroup>
 
 </Project>
