--- a/HttpClientForSQL/packages.config
+++ b/HttpClientForSQL/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net48" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Newtonsoft.Json.Bson" version="1.0.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
